<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/img_bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_result"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/result"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/iv_trophy"
        android:layout_width="wrap_content"
        android:layout_height="338dp"
        android:contentDescription="@string/image"
        android:src="@drawable/img_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_congratulations"
        android:layout_marginTop="16dp"
        android:text="@string/average"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_score"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="20sp"
        android:text="@string/your_score_is_9_out_of_10"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_finish"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:text="@string/finish"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>



</LinearLayout>