<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/img_bg"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tv_select_europe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/europe"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:padding="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/greyish"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_select_asia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asia"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:padding="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/greyish"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_select_africa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/africa"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:padding="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/greyish"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_select_world"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/world"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:padding="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/greyish"
            android:gravity="center"
            />

    </LinearLayout>
</ScrollView>