<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizQuestionsActivity"
    android:fillViewport="true"
    android:background="@color/light_grey"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_question"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="@color/purple_blue"
            android:textSize="22sp"
            android:text="@string/fetching_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_county_name"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="@color/purple_blue"
            android:textSize="22sp"
            android:visibility="gone"
            android:text=""/>


        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/text_welcome"


            android:id="@+id/iv_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_progress_details"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <ProgressBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="6"
                android:id="@+id/progressBar"
                android:minHeight="50dp"
                android:progress="0"
                android:indeterminate="false"
                style="?android:attr/progressBarStyleHorizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_progress"
                android:gravity="center"
                android:padding="15dp"
                android:textColorHint="@color/greyish"
                android:textSize="12sp"
                android:text="@string/_0_10" />


        </LinearLayout>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/tv_option_one"
           android:layout_margin="10dp"
           android:background="@drawable/default_option_border_bg"
           android:gravity="center"
           android:padding="15dp"
           android:textColor="@color/greyish"
           android:textSize="18sp"
           tools:text="Vienas cj"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_option_two"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/greyish"
            android:textSize="18sp"
            tools:text="Du cj"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_option_three"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/greyish"
            android:textSize="18sp"
            tools:text="Trys cj"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_option_four"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/greyish"
            android:textSize="18sp"
            tools:text="Keturi cj"/>

         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btn_submit"
             android:layout_margin="10dp"
             android:background="@color/purple_blue"
             android:text="@string/submit"
             android:textColor="@android:color/white"
             android:textStyle="bold"
             />

    </LinearLayout>

</ScrollView>